# SlimProc

./: .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  README.md
cmake/: logic.cmake
fpga/: CMakeLists.txt  logic
fpga/src/: cpu.v  instRom.v
fpga/src/cpu/: alu.v  control-unit.v  datapath-unit.v  fetch.v  regs.v
include/slimproc/: constants.h  cpu.h
processor/src/: cpu.v  instRom.v
scripts/: install-deps.sh
soc/: CMakeLists.txt
soc/cmake/: logic.cmake
soc/include/: slimproc
soc/include/soc/: cpu.h  cpu.hpp  mmu.hpp
soc/src/: cpu.cpp  main.cpp  mmu.cpp
soc/src/cpu/: reg.cpp
